--- a/404.html
+++ b/404.html
@@ -60,12 +60,12 @@
 
       <p>
         If this is your site, marrrrratches the URL.<br>
-        For root URLs (like <code>http://example.com/</code>) you must provide an
-        <code>index.html</code> file.
+        For root URLs (like <code>https://aedotpn.github.io/</code>) you must provide an
+        <code>404.html</code> file.
       </p>
 
       <p>
-        <a href="https://help.github.com/pages/">Read the full documentation</a>
+        <a href="https://aedotpn.github.io/404.html">Read the full documentation</a>
         for more information about using <strong>GitHub Pages</strong>.
       </p>
 
