--- a/404.html
+++ b/404.html
@@ -1,2 +1,14 @@
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>:: Abidos Hotel Apartment ::</title>
+<body>
 <h1>Abidos Hotel Apartment</h1>
 <h3>404 page not Found</h3>
+
+
+</body>
+
+</html>
