--- a/404.html
+++ b/404.html
@@ -5,9 +5,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>:: Abidos Hotel Apartment ::</title>
 <body>
-<h1>Abidos Hotel Apartment</h1>
+<center>
+  <h1>Abidos Hotel Apartment</h1>
 <h3>404 page not Found</h3>
-
+</center>
 
 </body>
 
