--- a/g/index.html
+++ b/g/index.html
@@ -30,23 +30,23 @@
                 <form id="submit-form" action="" >
                     <p>
                         <label for="#">Name</label>
-                        <input type="text" name="name" class="required">
+                        <input type="text" name="name" required="">
                     </p>
                     <p>
                         <label for="#">Company</label>
-                        <input type="text" name="company" class="required">
+                        <input type="text" name="company" required="">
                     </p>
                     <p>
                         <label for="#">Email Address</label>
-                        <input type="email" name="email" class="required">
+                        <input type="email" name="email" required="">
                     </p>
                     <p>
                         <label for="#">Phone Number</label>
-                        <input type="text" name="phone" class="required">
+                        <input type="text" name="phone" required="">
                     </p>
                     <p class="full">
                         <label for="#">Message</label>
-                        <textarea name="message" id="msg" cols="30" rows="5"></textarea>
+                        <textarea name="message" id="msg" cols="30" rows="5" required=""></textarea>
                     </p>
                     <p class="full">
                         <button>Submit</button>
