--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <div class="languages">
         <ul>
         <li class="english_lang active"><a  title="English"  href="https://abidoshotels.com/">English</a></li>
-        <li class=""><a title="Arabic"   href="https://abidoshotels.com/dubai/ar">عربي</a></li>
+        <li class=""><a title="Arabic"   href="https://abidoshotels.com/">عربي</a></li>
         </ul></div>                </div>
             </li> 
         
