--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <div class="languages">
         <ul>
         <li class="english_lang active"><a  title="English"  href="https://abidoshotels.com/">English</a></li>
-        <li class=""><a title="Arabic"   href="https://abidoshotels.com/">عربي</a></li>
+        <li class=""><a title="Arabic"   href="https://abidoshotels.com/dubai/ar">عربي</a></li>
         </ul></div>                </div>
             </li> 
         
@@ -143,7 +143,7 @@
                                             </div>
                 </div>
                             <div class="slider-item">
-                    <img data-src="https://royalmhotels.com/abudhabi/uploads/banner/image/2000x1030/home-banner-2-min.jpg" alt="Luxury at its finest! " title="Luxury at its finest! " class=" lazy" />                    <div class="slider-shadow"></div>
+                    <img src="img/bg3.jpg" alt="Luxury at its finest! " title="Luxury at its finest! " class=" lazy" />                    <div class="slider-shadow"></div>
                     <div class="slider-text">
                                                     <div class="slider-text-small">Relax and reward yourself with a royal treat</div>
                                                 <div class="slider-text-main">Luxury at its finest!</div>
@@ -152,7 +152,7 @@
                                             </div>
                 </div>
                             <div class="slider-item">
-                    <img data-src="https://royalmhotels.com/abudhabi/uploads/banner/image/2000x1030/home-banner-3-min.jpg" alt="Luxury at its finest! " title="Luxury at its finest! " class=" lazy" />                    <div class="slider-shadow"></div>
+                    <img src="img/bg13.jpg" alt="Luxury at its finest! " title="Luxury at its finest! " class=" lazy" />                    <div class="slider-shadow"></div>
                     <div class="slider-text">
                                                     <div class="slider-text-small">Relax and reward yourself with a royal treat</div>
                                                 <div class="slider-text-main">Luxury at its finest!</div>
@@ -161,7 +161,7 @@
                                             </div>
                 </div>
                             <div class="slider-item">
-                    <img data-src="https://royalmhotels.com/abudhabi/uploads/banner/image/2000x1030/home-banner-5-min.jpg" alt="Luxury at its finest! " title="Luxury at its finest! " class=" lazy" />                    <div class="slider-shadow"></div>
+                    <img src="img/bg11.jpg" alt="Luxury at its finest! " title="Luxury at its finest! " class=" lazy" />                    <div class="slider-shadow"></div>
                     <div class="slider-text">
                                                     <div class="slider-text-small">Relax and reward yourself with a royal treat</div>
                                                 <div class="slider-text-main">Luxury at its finest!</div>
@@ -207,7 +207,7 @@
                 	    	    <h2 class="h2_home " ><a href="packages-and-offers/category/rooms-packages.html">Rooms Packages</a></h2>
 			                    <div class="package_bx">
 			                        <div class="package_img">
-			                        <img src="../uploads/offers_categories/image/712x400/oie_1951414tbLSm7F.jpg" alt="" title="" class="" />			                    </div>
+			                        <img src="img/bg25.jpg" alt="" title="" class="" />			                    </div>
 			                </div>
 			            </div>
 			            </div>
@@ -216,7 +216,7 @@
                 	    	    <h2 class="h2_home " ><a href="packages-and-offers/category/dining-offers.html">Dining Offers</a></h2>
 			                    <div class="package_bx">
 			                        <div class="package_img">
-			                        <img src="../uploads/offers_categories/image/712x400/28_Cuvee_Bar_Lounge.jpg" alt="" title="" class="" />			                    </div>
+			                        <img src="img/bg9.jpg" alt="" title="" class="" />			                    </div>
 			                </div>
 			            </div>
 			            </div>
@@ -256,10 +256,10 @@
                                 <div class="col-md-6 col-xs-6">
                                     <div class="rooms_content">
                                         <h2 class="h2_home h2_border"><a href="dining.html">Dining</a></h2>
-                                        <h3 class="h3_home">Royal Dining Venues</h3>
+                                        <h3 class="h3_home">Abidos Dining </h3>
                                         <div class="description">
                                             <p>
-	The Royal M Hotel offers a wide range of inspiring dining possibilities for every occasion, as well as several exciting social destinations to enjoy during your stay. From the contemporary Mezze Dining Room to the gourmet Celebrity Restaurant, and from the vibrant waterfront Millionaire&rsquo;s Restaurant&nbsp;you&#39;ll discover why Royal M is not just a hotel, it&rsquo;s a whole new lifestyle experience.&nbsp;</p>
+	Abidos offers a wide range of inspiring dining possibilities for every occasion, as well as several exciting social destinations to enjoy during your stay. From the contemporary Mezze Dining Room to the gourmet Celebrity Restaurant, and from the vibrant waterfront Millionaire&rsquo;s Restaurant&nbsp;you&#39;ll discover why Royal M is not just a hotel, it&rsquo;s a whole new lifestyle experience.&nbsp;</p>
 <p>
 	<br />
 	&nbsp;</p>
@@ -273,7 +273,7 @@
                                 </div>
                                 <div class="col-md-6 col-xs-6 trans right-trans delay-1 ">
                                     <div class="rooms_img addImgEffect">
-                                        <a href="dining.html">                                        <img data-src="https://royalmhotels.com/abudhabi/uploads/home_content/image/900x505/dining-home.jpg" alt="Dining" title="Dining" class=" lazy" />                                        </a>                                    </div>
+                                        <a href="dining.html">                                        <img src="img/bg5.jpg" alt="Dining" title="Dining" class=" lazy" />                                        </a>                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -285,7 +285,7 @@
                             <a href="spa-and-wellness.html">                            Spa & Wellness                             </a>   
                         </h2>
                         <div class="rooms_img addImgEffect">
-                            <a href="spa-and-wellness.html">                                <img data-src="https://royalmhotels.com/abudhabi/uploads/home_content/image/900x505/spa-and-wellness-home.jpg" alt="Spa & Wellness" title="Spa & Wellness" class=" lazy" />                            </a>                        </div>
+                            <a href="spa-and-wellness.html">                                <img src="img/bg14.jpg" alt="Spa & Wellness" title="Spa & Wellness" class=" lazy" />                            </a>                        </div>
                         <div class="rooms2_content">
                             <h3 class="h3_home"></h3>
                             <div class="description">
@@ -300,7 +300,7 @@
                             <a href="meetings-and-events.html">                            Meetings & Events                             </a>   
                         </h2>
                         <div class="rooms_img addImgEffect">
-                            <a href="meetings-and-events.html">                                <img data-src="https://royalmhotels.com/abudhabi/uploads/home_content/image/900x505/meeting-and-events-home.jpg" alt="Meetings & Events" title="Meetings & Events" class=" lazy" />                            </a>                        </div>
+                            <a href="meetings-and-events.html">                                <img src="img/bg27.jpg" alt="Meetings & Events" title="Meetings & Events" class=" lazy" />                            </a>                        </div>
                         <div class="rooms2_content">
                             <h3 class="h3_home"></h3>
                             <div class="description">
@@ -521,7 +521,7 @@ z-index:0;}
 </div>
   </div>
   
-  <a class="btn-link mobile-booknow-btn" onclick="fadeBookingFrame()">Book now</a>
+  <a href="https://be.synxis.com/?chain=14417&start=availresults&shell=flex&template=flex&hotel=57855&arrive=08%2f29%2f2021&nights=1&adult=1&child=0&promo=" class="btn-link mobile-booknow-btn" onclick="fadeBookingFrame()">Book now</a>
 <script>
 var baseurl = 'https://royalmhotels.com/abudhabi/';
 var siteurl = 'index.html';
