--- a/photo-gallery.html
+++ b/photo-gallery.html
@@ -134,165 +134,165 @@
 					<div class="gallery-style-4-slider">
 													<div class="item">
 								<div class="gal-item">
-									<img src="../uploads/photo_gallery/gallery/1700x670/21.jpg" alt="" title="" class="" />								</div>
+									<img src="img/bg15.jpg" alt="" title="" class="" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/1700x670/55.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg16.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/1700x670/6.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg13.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/1700x670/photo-gallery-gal-top-11.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg18.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/1700x670/_MG_8640_1_2_Realistic1.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg19.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/1700x670/31.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg2.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/1700x670/66.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg21.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/1700x670/112.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg22.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/1700x670/4441.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg23.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/1700x670/gal31.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg24.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/1700x670/11.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg26.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/1700x670/88.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg4.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/1700x670/22.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg6.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/1700x670/gal21.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg7.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/1700x670/441.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg8.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/1700x670/gal1.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg9.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/1700x670/photo-gallery-gal-top-21.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg10.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/1700x670/111.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg14.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/1700x670/771.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg12.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/1700x670/gallery_photos1.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg20.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 											</div>
 					<div class="gallery-style-4-thumbnails slick-arrow-style-1">
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/245x135/21.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg15.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/245x135/55.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg16.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/245x135/6.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg13.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/245x135/photo-gallery-gal-top-11.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg18.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/245x135/_MG_8640_1_2_Realistic1.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg19.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/245x135/31.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg2.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/245x135/66.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg21.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/245x135/112.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg22.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/245x135/4441.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg23.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/245x135/gal31.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg24.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/245x135/11.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg26.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/245x135/88.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg4.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/245x135/22.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg6.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/245x135/gal21.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg7.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/245x135/441.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg8.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/245x135/gal1.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg9.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/245x135/photo-gallery-gal-top-21.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg10.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/245x135/111.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg14.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/245x135/771.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg12.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 													<div class="item">
 								<div class="gal-item">
-									<img data-src="https://royalmhotels.com/abudhabi/uploads/photo_gallery/gallery/245x135/gallery_photos1.jpg" alt="" title="" class=" lazy" />								</div>
+									<img src="img/bg20.jpg" alt="" title="" class=" lazy" />								</div>
 							</div>
 											</div>
 				</div>
@@ -336,7 +336,7 @@
         </div>
         <div class="footer_blks">
                   <div class="col-md-5  footer_col_1">
-                        <div id="TA_cdsscrollingravenarrow957" class="TA_cdsscrollingravenarrow"><ul id="zIVXpie6" class="TA_links Dpv0kS"><li id="SsJcQ7dHG" class="7pLnXSxa"><a target="_blank" href="https://www.tripadvisor.ca/Hotel_Review-g294013-d14964978-Reviews-Royal_M_Hotel_And_Resort-Abu_Dhabi_Emirate_of_Abu_Dhabi.html"><img src="https://static.tacdn.com/img2/brand_refresh/Tripadvisor_lockup_vertical.svg" alt="TripAdvisor" class="widEXCIMG" id="CDSWIDEXCLOGO"/></a></li></ul></div><script async src="https://www.jscache.com/wejs?wtype=cdsscrollingravenarrow&amp;uniq=957&amp;locationId=14964978&amp;lang=en_CA&amp;border=true&amp;display_version=2" data-loadtrk onload="this.loadtrk=true"></script>
+                        <div id="TA_cdsscrollingravenarrow957" class="TA_cdsscrollingravenarrow"><ul id="zIVXpie6" class="TA_links Dpv0kS"><li id="SsJcQ7dHG" class="7pLnXSxa"><a target="_blank" href="https://www.tripadvisor.ca/Hotel_Review-g294013-d14964978-Reviews-Royal_M_Hotel_And_Resort-Abu_Dhabi_Emirate_of_Abu_Dhabi.html"><img src="https://static.tacdn.com/img2/brand_refresh/Tripadvisor_lockup_vertical.svg" alt="TripAdvisor" class="widEXCIMG" id="CDSWIDEXCLOGO"/></a></li></ul></div><script async src="https://www.jscache.com/wejs?wtype=cdsscrollingravenarrow&amp;uniq=957&amp;locationId=14964978&amp;lang=en_CA&amp;border=true&amp;display_version=2" loadtrk onload="this.loadtrk=true"></script>
                       
                    <h4 class="f_title">Royal M Abu Dhabi</h4>
                 <div class="footer_content">
