--- a/index.html
+++ b/index.html
@@ -523,17 +523,9 @@ z-index:0;}
   
   <a href="https://be.synxis.com/?chain=14417&start=availresults&shell=flex&template=flex&hotel=57855&arrive=08%2f29%2f2021&nights=1&adult=1&child=0&promo=" class="btn-link mobile-booknow-btn" onclick="fadeBookingFrame()">Book now</a>
 <script>
-var baseurl = 'https://royalmhotels.com/abudhabi/';
+var baseurl = 'https://www.abidoshotels.com/';
 var siteurl = 'index.html';
-var imgurl = 'https://royalmhotels.com/abudhabi/front/images/';
-var dynamicimgurl = 'https://royalmhotels.com/abudhabi/uploads/';
-var assetsurl = 'https://royalmhotels.com/abudhabi/front/';
-var loading_text = 'Loading';
-var is_mobile = false;
-var loading = 'Loading';
-var booking_frames = ['dining','room','cio','pck','me'];
-var booking_min_date = '2021-08-29';
-var booking_min_time = '15:20';
+
 
 var datecalendar_lang = 'en';
 var months_tra = ['January','February','March','April','May','June','July','August','September','October','November','December'];
