--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <meta name="language" content="english" />
@@ -19,16 +19,14 @@
 <link rel="icon" type="image/png" href="img/logo.png">
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&amp;display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Cairo:300,400,600,700&amp;display=swap&amp;subset=arabic" rel="stylesheet">
-<link href="../../../cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css" rel="stylesheet">
-<link href="../front/js/slick/slick.css" rel="stylesheet" type="text/css" />
-				<link href="../front/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-				<link href="../front/css/transitions.css" rel="stylesheet" type="text/css" />
-				<link href="../front/css/style.css" rel="stylesheet" type="text/css" />
-				<link href="../front/css/responsive.css" rel="stylesheet" type="text/css" />
-				<link href="../front/js/intl-tel-input-master/build/css/intlTelInput.min.css" rel="stylesheet" type="text/css" />
-				<link href="../front/js/datetimepicker/build/jquery.datetimepicker.min.css" rel="stylesheet" type="text/css" />
-				
-
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css" rel="stylesheet">
+<link href="front/js/slick/slick.css" rel="stylesheet" type="text/css">
+				<link href="front/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+				<link href="front/css/transitions.css" rel="stylesheet" type="text/css">
+				<link href="front/css/style.css" rel="stylesheet" type="text/css">
+				<link href="front/css/responsive.css" rel="stylesheet" type="text/css">
+				<link href="front/js/intl-tel-input-master/build/css/intlTelInput.min.css" rel="stylesheet" type="text/css">
+				<link href="front/js/datetimepicker/build/jquery.datetimepicker.min.css" rel="stylesheet" type="text/css">
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180302243-2"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -230,7 +228,7 @@
                             <div class="row row-eq-height">
                                 <div class="col-md-6 col-xs-6 trans left-trans delay-1 ">
                                     <div class="rooms_img addImgEffect">
-                                        <a href="rooms.html">                                        <img data-src="https://royalmhotels.com/abudhabi/uploads/home_content/image/900x505/rooms-and-suites-home.jpg" alt="Rooms & Suites" title="Rooms & Suites" class=" lazy" />                                        </a>                                    </div>
+                                        <a href="rooms.html">                                        <img data-src="uploads/home_content/image/900x505/rooms-and-suites-home.jpg" alt="Rooms & Suites" title="Rooms & Suites" class=" lazy" />                                        </a>                                    </div>
                                 </div>
                                 <div class="col-md-6 col-xs-6">
                                     <div class="rooms_content">
