--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                             <div class="row row-eq-height">
                                 <div class="col-md-6 col-xs-6 trans left-trans delay-1 ">
                                     <div class="rooms_img addImgEffect">
-                                        <a href="rooms.html">                                        <img data-src="uploads/home_content/image/900x505/rooms-and-suites-home.jpg" alt="Rooms & Suites" title="Rooms & Suites" class=" lazy" />                                        </a>                                    </div>
+                                        <a href="rooms.html">                                        <img src="img/bg19.jpg" alt="Rooms & Suites" title="Rooms & Suites" class=" lazy" />                                        </a>                                    </div>
                                 </div>
                                 <div class="col-md-6 col-xs-6">
                                     <div class="rooms_content">
@@ -236,7 +236,7 @@
                                         <h3 class="h3_home">Hospitality is simply royal</h3>
                                         <div class="description">
                                             <p>
-	Experience royalty in our deluxe rooms at Royal M Hotel and Resort &ndash; enjoy the scenic view from your windows, fashionable interiors, complete amenities, and customer service that makes you feel at home.</p>                                        </div>
+	Experience royalty in our deluxe rooms at Abidos &ndash; enjoy the scenic view from your windows, fashionable interiors, complete amenities, and customer service that makes you feel at home.</p>                                        </div>
                                         <div class="btns_rooms">
                                                                                             <a href="rooms.html">Details</a> 
                                                                                                                                         <a href="https://be.synxis.com/?chain=14417&start=availresults&shell=flex&template=flex&hotel=57855&arrive=08%2f29%2f2021&nights=1&adult=1&child=0&promo=" target="_blank">Book now</a> 
@@ -439,7 +439,7 @@ z-index:0;}
                         <p>
                             Abidos Hotel Apartment  Al Barsha &amp; Dubailand P.O. Box 450605 AAl Barsha, Dubai, UAE</p>                    </div>
                                             <div class="footer_row">
-                            <a href="#" target="_blank"><i class="fa fa-map-marker"></i> View Map</a>
+                            <a href="https://goo.gl/maps/xFofnfw5e2SKSYx88" target="_blank"><i class="fa fa-map-marker"></i> View Map</a>
                         </div>
                                         <div class="footer_row phone_row">
                         <a class="ltr_m" href="tel:97143164040">+971 4 316 4040</a>
