--- a/photo-gallery.html
+++ b/photo-gallery.html
@@ -344,7 +344,7 @@
 							<p>
 								Abidos Hotel Apartment  Al Barsha &amp; Dubailand P.O. Box 450605 AAl Barsha, Dubai, UAE</p>                    </div>
 												<div class="footer_row">
-								<a href="#" target="_blank"><i class="fa fa-map-marker"></i> View Map</a>
+								<a href="https://goo.gl/maps/xFofnfw5e2SKSYx88" target="_blank"><i class="fa fa-map-marker"></i> View Map</a>
 							</div>
 											<div class="footer_row phone_row">
 							<a class="ltr_m" href="tel:97143164040">+971 4 316 4040</a>
