--- a/index.html
+++ b/index.html
@@ -105,9 +105,7 @@
             <li>
                 <a href="meetings-and-events.html" class="">Meetings & Events</a>
             </li>
-            <li>
-                <a href="crown-island.html" class="">Crown Island</a>
-            </li>
+            
             <li>
                 <a href="photo-gallery.html" class="">Gallery</a>
             </li>
@@ -265,7 +263,7 @@
 	&nbsp;</p>                                        </div>
                                         <div class="btns_rooms">
                                                                                             <a href="dining.html">Details</a> 
-                                                                                                                                        <a href="dining.html" target="_blank">Book now</a> 
+                                                                                                                                        <a href="https://be.synxis.com/?chain=14417&start=availresults&shell=flex&template=flex&hotel=57855&arrive=08%2f29%2f2021&nights=1&adult=1&child=0&promo=" target="_blank">Book now</a> 
                                                                                     </div>
                                     </div>
                                 </div>
@@ -415,9 +413,7 @@ z-index:0;}
                 <li>
                     <a href="meetings-and-events.html" class="">Meetings & Events</a>
                 </li>
-                <li>
-                    <a href="crown-island.html" class="">Crown Island</a>
-                </li>
+               
                 <li>
                     <a href="photo-gallery.html" class="">Gallery</a>
                 </li>
