updeate site map name change

--- a/photo-gallery.html
+++ b/photo-gallery.html
@@ -84,25 +84,25 @@
                 <a href="index.html" class="">Home</a>
             </li>
             <li class="">
-                <a href="packages-and-offers.html" class="nested-list ">Packages & Offers</a>
+                <a href="#" class="nested-list ">Packages & Offers</a>
                                     <ul>
-                                                    <li><a href="packages-and-offers/category/rooms-packages.html">Rooms Packages</a></li>
-                                                    <li><a href="packages-and-offers/category/dining-offers.html">Dining Offers</a></li>
-                                                    <li><a href="packages-and-offers/category/other.html">Others</a></li>
+                                                    <li><a href="#">Rooms Packages</a></li>
+                                                    <li><a href="#">Dining Offers</a></li>
+                                                    <li><a href="#">Others</a></li>
                                             </ul>
                     <a class="submenunav"><i class="fas fa-plus off"></i><i class="fas fa-minus on"></i></a>
                             </li>
             <li>
-                <a href="rooms.html" class="">Rooms & Suites</a>
+                <a href="#" class="">Rooms & Suites</a>
             </li>
             <li>
             	<a href="dining.html" class="">Dining</a>
             </li>
             <li>
-                <a href="spa-and-wellness.html" class="">Spa & Wellness</a>
+                <a href="#" class="">Spa & Wellness</a>
             </li>
             <li>
-                <a href="meetings-and-events.html" class="">Meetings & Events</a>
+                <a href="#" class="">Meetings & Events</a>
             </li>
             
             <li>
@@ -304,19 +304,19 @@
 			<div class="footer_menu">
 				<ul>
 					<li>
-						<a href="packages-and-offers.html" class="">Packages & Offers</a>
+						<a href="#" class="">Packages & Offers</a>
 					</li>
 					<li>
-						<a href="rooms.html" class="">Rooms & Suites</a>
+						<a href="#" class="">Rooms & Suites</a>
 					</li>
 					<li>
 						<a href="dining.html" class="">Dining</a>
 					</li>
 					<li>
-						<a href="spa-and-wellness.html" class="">Spa & Wellness</a>
+						<a href="#" class="">Spa & Wellness</a>
 					</li>
 					<li>
-						<a href="meetings-and-events.html" class="">Meetings & Events</a>
+						<a href="#" class="">Meetings & Events</a>
 					</li>
 					
 					<li>
