--- a/contact-us.html
+++ b/contact-us.html
@@ -122,7 +122,7 @@
 		<h1 class="page-title">Contact Us</h1>
 					<div class="breadcrumbs">
 				<ul>
-					<li><a href="https://royalmhotels.com/abudhabi/">Home</a></li><li><span>Contact Us</span></li>				</ul>
+					<li><a href="index.html">Home</a></li><li><span>Contact Us</span></li>				</ul>
 			</div>
 			</div>
 
